# uosp

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README  README.md
changelog/: Cargo.toml
changelog/src/: changelog.rs
debian/: changelog  control  copyright  gbp.conf  watch
git/: Cargo.toml
git/src/: git.rs
snap/: snapcraft.yaml
src/: git.rs  lib.rs  main.rs
